Add: Overlay to show where mouseAction and ImageAction will be executed Add: CheckBox to toggle overlay Fix: Renamed class CoordinateHelper to CoordinatesHelper Fix: Changed return type for ImageSearch.FindImage() to int[] for easier use

--- a/Tao Bot Maker/Resources/Strings.fr.resx
+++ b/Tao Bot Maker/Resources/Strings.fr.resx
@@ -411,6 +411,9 @@
   <data name="LabelDragAndDrop" xml:space="preserve">
     <value>Glisser-Déposer</value>
   </data>
+  <data name="LabelEnableDrawingOverlay" xml:space="preserve">
+    <value>Overlay</value>
+  </data>
   <data name="LabelEndCoordinates" xml:space="preserve">
     <value>Coordonnées d'arrivée</value>
   </data>
