Fix: Typo in Icons8 linkLabel

--- a/Tao Bot Maker/Resources/Strings.fr.resx
+++ b/Tao Bot Maker/Resources/Strings.fr.resx
@@ -529,7 +529,7 @@
     <value>Attention</value>
   </data>
   <data name="LinkLabelIconEight" xml:space="preserve">
-    <value>Icon8 pour les icones</value>
+    <value>Icons8 pour les icones</value>
   </data>
   <data name="MenuAbout" xml:space="preserve">
     <value>A propos</value>
