--- a/Tao Bot Maker/Resources/Strings.resx
+++ b/Tao Bot Maker/Resources/Strings.resx
@@ -532,7 +532,7 @@
     <value>Warning</value>
   </data>
   <data name="LinkLabelIconEight" xml:space="preserve">
-    <value>Icon8 for providing icons</value>
+    <value>Icons8 for providing icons</value>
   </data>
   <data name="MenuAbout" xml:space="preserve">
     <value>About</value>
