--- a/Tao Bot Maker/Resources/Strings.resx
+++ b/Tao Bot Maker/Resources/Strings.resx
@@ -165,6 +165,12 @@
   <data name="ButtonOpenLogsFolder" xml:space="preserve">
     <value>Open logs folder</value>
   </data>
+  <data name="ButtonOpenSequencesFolder" xml:space="preserve">
+    <value>Open sequences folder</value>
+  </data>
+  <data name="ButtonSave" xml:space="preserve">
+    <value>Save</value>
+  </data>
   <data name="ButtonSearchImage" xml:space="preserve">
     <value>Search image</value>
   </data>
@@ -468,6 +474,9 @@
   <data name="LabelRightClick" xml:space="preserve">
     <value>Right click</value>
   </data>
+  <data name="LabelSavedSequences" xml:space="preserve">
+    <value>Saved sequences</value>
+  </data>
   <data name="LabelSaveLogLevel" xml:space="preserve">
     <value>Save log of level</value>
   </data>
@@ -482,6 +491,9 @@
   </data>
   <data name="LabelSequence" xml:space="preserve">
     <value>Sequence</value>
+  </data>
+  <data name="LabelSequenceName" xml:space="preserve">
+    <value>Sequence name</value>
   </data>
   <data name="LabelShowLogLevel" xml:space="preserve">
     <value>Show log of level</value>
