--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,7 @@
 Changelog:
 2.0.4-beta:
 Add: New form when saving sequences
+Fix: Missing form title when editing an action
 
 2.0.3-beta:
 Add: 'Edit action' in contextMenu
