--- a/Tao Bot Maker/Resources/Strings.fr.resx
+++ b/Tao Bot Maker/Resources/Strings.fr.resx
@@ -267,6 +267,9 @@
   <data name="ErrorMessageWaitActionInvalidMinimumWait" xml:space="preserve">
     <value>L'attente minimum ne peut pas être inférieure à 0.</value>
   </data>
+  <data name="FormTitleEditAction" xml:space="preserve">
+    <value>Editer une action</value>
+  </data>
   <data name="FormTitleMain" xml:space="preserve">
     <value>Tao's Bot Maker</value>
   </data>
