--- a/Tao Bot Maker/Resources/Images.resx
+++ b/Tao Bot Maker/Resources/Images.resx
@@ -142,4 +142,13 @@
   <data name="drag" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>icons8-drag-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SettingTypeGeneral" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>icons8-monitor-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SettingTypeHotkey" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>icons8-keypad-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SettingTypeOther" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>icons8-support-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
