--- a/Tao Bot Maker/Resources/Strings.resx
+++ b/Tao Bot Maker/Resources/Strings.resx
@@ -430,7 +430,7 @@
     <value>Error</value>
   </data>
   <data name="LabelExpiration" xml:space="preserve">
-    <value>Expiration (s)</value>
+    <value>Expiration (ms)</value>
   </data>
   <data name="LabelHotkeyEndCoords" xml:space="preserve">
     <value>End coordinates</value>
